--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
   position: fixed;
-  width: 80%;
+  width: g.$main_wrapper_width;
   height: 23px;
   bottom: 0;
   background-color: g.$theme_secondary;
